[tool.poetry]
name = "kr3"
version = "0.1.0"
description = ""
authors = ["Tatyana Khorobrykh <pushistik607@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
